Navbar mobile layout bug on resolutions > 980px

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -151,11 +151,11 @@
 // Shared (top/bottom) styles
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  position: fixed;
+  //position: fixed;
   right: 0;
   left: 0;
   z-index: @zindexFixedNavbar;
-  margin-bottom: 0; // remove 18px margin for static navbar
+  //margin-bottom: 0; // remove 18px margin for static navbar
 }
 .navbar-fixed-top .navbar-inner,
 .navbar-fixed-bottom .navbar-inner {
